5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1575_1333.log
== TEST (2019-03-12 11:43:32) 
-- CODE:
expressao = 30 – 3**2 + 8//3**2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3**2 + 8//3**2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:43:54) 
-- CODE:
expressao = 30 - (3**2() + (8//(3**2)) * 10
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:24) 
-- CODE:
expressao = 30 - (3**2() + (8//(3**2)) * 10
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:55) 
-- CODE:
expressao = 30 - (3**2() + (8//(3**2)) * 10
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:19) 
-- CODE:
expressao = 30 -(3**2) + (8//(3**2)) * 10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:22) 
-- CODE:
expressao = 30 -(3**2) + (8//(3**2)) * 10
print(expressao)
-- EXECUTION TIME:
0.109001
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
